# AndroidP7zip

libp7zip/src/main/cpp/: CMakeLists.txt
